# SessionHub

./: .gitignore  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bash.exe.stackdump  diff_app.txt  diff_cargo.txt  diff_dashboard.txt  diff_en.txt  diff_icons.txt  diff_lib.txt  diff_projectview.txt  diff_sessioncard.txt  diff_sidebar.txt  diff_types.txt  diff_zh.txt  package.json
.claude/hooks/: on-notification.cjs  on-permission-request.cjs  on-post-tool-use.cjs  on-post-tool-use.ps1  on-post-tool-use.sh  on-pre-tool-use.cjs  on-pre-tool-use.ps1  on-pre-tool-use.sh  on-session-start.cjs  on-session-start.ps1  on-session-start.sh  on-stop.cjs  on-stop.ps1  on-stop.sh  on-user-prompt-submit.cjs  on-user-prompt-submit.ps1  on-user-prompt-submit.sh
.design-sync/: NOTES.md  config.json  conventions.md  ds-styles.ts
.design-sync/previews/: AgentsIcon.tsx  ArchiveIcon.tsx  BridgeEventMonitorDialog.tsx  ChevronLeftIcon.tsx  CollapsibleSection.tsx  ConfirmDialog.tsx  ContentViewer.tsx  CopyIcon.tsx  DashboardAnalyticsPanel.tsx  DeleteIcon.tsx  DropdownMenu.tsx  EditDialog.tsx  EditNotesIcon.tsx  EditTagsIcon.tsx  ExplorerTree.tsx  ExternalLinkIcon.tsx  EyeIcon.tsx  FolderIcon.tsx  MoonIcon.tsx  PieChart.tsx  PinIcon.tsx  PlanIcon.tsx  PlugIcon.tsx  ProjectStatsBanner.tsx  QuotaOverview.tsx  RefreshIcon.tsx  SaveIcon.tsx  SearchIcon.tsx  SessionCard.tsx  SessionStatsBadge.tsx  SessionStatsPanel.tsx  SessionTodosPanel.tsx  StatsIcon.tsx  StatusBar.tsx  SunIcon.tsx  SyncConflictDialog.tsx  SyncIcon.tsx  TerminalIcon.tsx  TrendChart.tsx  UnarchiveIcon.tsx  (+1 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.opencode/: opencode.json  package-lock.json
.opencode/command/: build.md
.sessionhub/: agents.json
docs/: architecture-runtime-separation.md
hooks/codex/: on-post-tool-use.cjs  on-post-tool-use.ps1  on-post-tool-use.sh  on-pre-tool-use.cjs  on-pre-tool-use.ps1  on-pre-tool-use.sh  on-session-start.cjs  on-session-start.ps1  on-session-start.sh  on-stop.cjs  on-stop.ps1  on-stop.sh  on-user-prompt-submit.cjs  on-user-prompt-submit.ps1  on-user-prompt-submit.sh
hooks/copilot/: on-error-occurred.cjs  on-error-occurred.ps1  on-error-occurred.sh  on-post-tool-use.cjs  on-post-tool-use.ps1  on-post-tool-use.sh  on-pre-tool-use.cjs  on-pre-tool-use.ps1  on-pre-tool-use.sh  on-session-end.cjs  on-session-end.ps1  (+7 more)
openspec/: config.yaml
scripts/: release.ps1  sync-version.mjs  verify-windows-notification-identity.ps1
src/: AGENTS.md  App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  bash.exe.stackdump  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  activity.rs  agents_config.rs  antigravity_hooks.rs  app_setup.rs  db.rs  lib.rs  main.rs  mcp_config.rs  openspec_scan.rs  settings.rs  sisyphus.rs  stats.rs  tray_icon.rs  types.rs  watcher.rs
src-tauri/src/agents_config/: tests.rs
src-tauri/src/commands/: agents_config.rs  analytics.rs  mcp_config.rs  mod.rs  notifications.rs  plan.rs  provider.rs  quota.rs  session_todos.rs  sessions.rs  settings.rs  tools.rs
src-tauri/src/platform/: mod.rs  win32_focus.rs
src-tauri/src/provider/: antigravity.rs  bridge.rs  claude.rs  codex.rs  copilot.rs  mod.rs  opencode.rs
src-tauri/src/quota/: antigravity.rs  cache.rs  claude.rs  codex.rs  copilot.rs  mod.rs  opencode.rs
src-tauri/src/sessions/: antigravity.rs  claude.rs  codex.rs  copilot.rs  git.rs  mod.rs  opencode.rs
src-tauri/src/stats/: claude.rs  mod.rs  opencode.rs  tests.rs
src-tauri/src/types/: analytics.rs  claude.rs  intervention.rs  misc.rs  mod.rs  opencode.rs  provider_integration.rs  quota.rs  session.rs  settings.rs  sisyphus_openspec.rs
(+662 files in other folders)
