[package]
name = "session-hub"
version = "0.1.8"
description = "Windows desktop app for managing AI coding CLI sessions (Copilot, OpenCode, Codex, Claude, Antigravity)"
authors = ["ching"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "session_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notify = "8.0"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
ureq = { version = "2", features = ["native-tls", "json"] }
walkdir = "2"
sha2 = "0.10"
toml_edit = "0.25.12"
image = { version = "0.25.10", default-features = false, features = ["png"] }
tauri-plugin-window-state = "2.4.1"
tauri-plugin-single-instance = "2.4.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Foundation", "Win32_Storage_FileSystem"] }
